--- a/cake.html
+++ b/cake.html
@@ -27,6 +27,10 @@
             flex-direction: column;
         }
 
+        .blow-btn {
+            font-family: 'Mali', cursive;
+        }
+
         .card {
             background: #fff;
             border-radius: 25px;
