--- a/cake.html
+++ b/cake.html
@@ -364,6 +364,7 @@
 
             /* ปุ่มเป่าเทียน */
             .blow-btn {
+                font-family: 'Mali', cursive;
                 margin-top: 6px;
                 font-size: 15px;
                 padding: 8px 20px;
@@ -404,6 +405,7 @@
         }
 
         .blow-btn {
+            font-family: 'Mali', cursive;
             margin-top: 8px;
             padding: 10px 28px;
             background: #E86C8D;
