--- a/memory.html
+++ b/memory.html
@@ -447,10 +447,10 @@
 
         <!-- การ์ดที่ 3 -->
         <div class="memory-card">
-            <img src="img/ann16-0004.jpeg" alt="memory3">
+            <img src="img/ann16-0006.jpg" alt="memory3">
             <div class="memory-text">
-                <h2>ldr relationship</h2>
-                <p>เราพยายามกันมากเพราะอยู่ไกล ขอบคุณทุกโมเม้นผ่านๆมาที่มันเกิดขึ้น กินข้าวด้วยกัน ไปเที่ยว ถ่ายรูปหรือแค่นอนดูหนังในห้องเฉยๆเค้าชอบทั้งหมด เพราะทุกครั้งที่จะเจอ เราตั้งใจมาเจอกันจริงๆ
+                <h2>LDR</h2>
+                <p>ที่ผ่านมาเราพยายามกันเยอะมากเพราะอยู่ไกล แต่เค้าดีใจนะ ขอบคุณที่ตั้งใจทำหน้าที่ของตัวเองแต่ยังหาเวลามาเจอกันในวันสำคัญ วันเกิด หรือแค่วันธรรมดาที่แค่ได้กินข้าวนอนดูหนังในห้องด้วยกัน เค้าไม่นอยเลยกับระยะทาง รอได้เพราะเข้าใจ ไม่ใช่ถูกบังคับให้รอ และทุกครั้งที่จะเจอ เราตั้งใจมาเจอกันจริงๆ
                 </p>
             </div>
         </div>
